# ois-input-manager

./: .travis.yml  CHANGELOG.md  README.md  ois-input-manager.cabal
cbits/: MyInputManager.cpp  MyInputManager.hpp  inputManagerInterface.cpp
src/: Key.hs  Mouse.hs  OISInputManager.hs
